--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuslwi73boA5+5ug8IJysY",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNkSiYjnMZVYrjwGy4tKdf0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +29,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# 作業1加入AI分析功能"
+      ],
       "metadata": {
         "id": "iWIdEL9QpxBc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **歷程記錄**"
+      ],
+      "metadata": {
+        "id": "VEM7Rg7MC71x"
       }
     },
     {
@@ -371,15 +383,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### **最終程式碼**"
-      ],
-      "metadata": {
-        "id": "8UOxl8W_t3w1"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "import datetime\n",
@@ -430,6 +433,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **最終程式碼**"
+      ],
+      "metadata": {
+        "id": "8UOxl8W_t3w1"
+      }
     },
     {
       "cell_type": "code",
