--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -2377,20 +2377,20 @@
           "height": 680
         },
         "id": "Z0z7i5Y8E-dM",
-        "outputId": "7b2e6a43-f4fc-419c-e91a-847b842698b5"
+        "outputId": "0c06a39c-987b-4640-ce8b-f4405d90b023"
       },
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "⚠️ 無法從 Colab Secrets 讀取，請手動輸入：\n",
-            "請貼上你的 Gemini API Key：AIzaSyDk4KujyoxA7p5hZaerq27P1CgoUhRAsfw\n",
+            "請貼上你的 Gemini API Key：*******\n",
             "It looks like you are running Gradio on a hosted Jupyter notebook, which requires `share=True`. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://13ab510bcb4499daaa.gradio.live\n",
+            "* Running on public URL: https://abe9253e700628fb33.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -2402,7 +2402,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://13ab510bcb4499daaa.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://abe9253e700628fb33.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -2413,7 +2413,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 3
         }
       ]
     },
@@ -2634,7 +2634,7 @@
         "id": "ICQG8q5XsFqP",
         "outputId": "a22b2a83-64fb-43d3-9959-95747da1701d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -2974,7 +2974,7 @@
         "id": "P2g6Jcj_MLG4",
         "outputId": "d14aef2c-ab6f-433b-ae42-ee6b60731629"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3046,7 +3046,7 @@
         "id": "7IybEsniM2vx",
         "outputId": "bac9fdfa-7c02-44da-b17f-938d3fa73cb7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3414,7 +3414,7 @@
         "id": "EV0NIzYTNpV3",
         "outputId": "801f97c6-b3e7-4739-f1b6-66c6f8451c6a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3693,7 +3693,7 @@
         "id": "z0aDXYO8S3Ny",
         "outputId": "ab29396b-6271-4019-e964-6842c8a3b1be"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3926,7 +3926,7 @@
         "id": "-Cgn1dd3gQbf",
         "outputId": "2d23d7ab-fd44-4b08-ff3f-889578ac075c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4141,7 +4141,7 @@
         "id": "IRu4DEEa1ZKl",
         "outputId": "308f03a5-63d8-41cb-8bee-d5f915be6b0d"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4390,7 +4390,7 @@
         "id": "KGjpkN6VNcU1",
         "outputId": "5bd8c498-20e6-440c-ad4b-60d87336acb9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4639,7 +4639,7 @@
         "id": "DrKoqS9nWuhq",
         "outputId": "4a4a0699-ca5d-4f8e-ca92-59b5f0c52e69"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4937,7 +4937,7 @@
         "id": "_ZzoLhw1X-5h",
         "outputId": "368fc91b-7fff-4c2e-9f5f-3e072ea03ab8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5239,7 +5239,7 @@
         "id": "5g6TpZnec7BC",
         "outputId": "1d5b74a8-39c3-4a8a-e3b2-90ff31254987"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
